--- a/src/main/resources/data.properties
+++ b/src/main/resources/data.properties
@@ -6,17 +6,14 @@ gauss.eps=0.000001
 # #   # #
 
 # # параметры объемного случая # #
-# исходная толщина "пояса"
-disk.delta=0.5
 # исходная высота диска
 disk.h=1.0
 # радиус диска
 disk.r=4.0
-# параметры косинусоиды
-disk.p1=1.0
-disk.p2=1.0
-# число колец
-disk.rings=1
+# начальное давление
+disk.p=1.0
+# число колец (с учетом того, что пульпозное ядро тоже кольцо)
+disk.rings=3
 # число ячеек в каждом кольце
-disk.cells=
+disk.cells=9
 # #   # #
