pressure - ok, volume - not ok, delta - ok

--- a/src/main/resources/data.properties
+++ b/src/main/resources/data.properties
@@ -6,14 +6,21 @@ gauss.eps=0.000001
 # #   # #
 
 # # параметры объемного случая # #
-# исходная высота диска
-disk.h=1.0
-# радиус диска
-disk.r=4.0
-# начальное давление
-disk.p=1.0
+# исходная высота диска (мм)
+disk.h=8
+# радиус диска (мм)
+disk.r=20
+# начальное давление ()
+disk.p=0
 # число колец (с учетом того, что пульпозное ядро тоже кольцо)
 disk.rings=3
 # число ячеек в каждом кольце
-disk.cells=9
+disk.cells=8
+# #   # #
+
+# # прочие параметры # #
+# атмосферное давление
+other.atmp=1
+#
+other.eps=0.0001
 # #   # #
