--- a/src/main/resources/data.properties
+++ b/src/main/resources/data.properties
@@ -10,17 +10,20 @@ gauss.eps=0.000001
 disk.h=8
 # радиус диска (мм)
 disk.r=20
-# начальное давление ()
-disk.p=1.1
+# начальное давление (кПа) 1.1 атм
+disk.p=111.458
 # число колец (с учетом того, что пульпозное ядро тоже кольцо)
-disk.rings=2
+disk.rings=5
 # число ячеек в каждом кольце
-disk.cells=4
+disk.cells=46
 # #   # #
 
 # # прочие параметры # #
-# атмосферное давление
-other.atmp=1
+# атмосферное давление (кПа) 1.0 атм
+other.atmp=101.325
+# допустимая разница в давлениях
+other.eps=0.1
 #
-other.eps=0.01
+other.log-file-name=log.txt
+other.p-log-file-name=p_data.txt
 # #   # #
