added debug-mode and log-to-file properties

--- a/src/main/resources/data.properties
+++ b/src/main/resources/data.properties
@@ -23,7 +23,12 @@ disk.cells=46
 other.atmp=101.325
 # допустимая разница в давлениях
 other.eps=0.1
-#
+# файл для логгирования
 other.log-file-name=log.txt
+# файл для логгирования значений давлений
 other.p-log-file-name=p_data.txt
+# логгирование в консоль
+other.debug-mode=true
+# логгирование в файл
+other.log-to-file=true
 # #   # #
