кое как работает, хотя бы сходится

--- a/src/main/resources/data.properties
+++ b/src/main/resources/data.properties
@@ -2,33 +2,47 @@
 # количество разбиений для ИКФ
 iqf.n=14
 #  погрешность для гаусса
-gauss.eps=0.000001
+gauss.eps=0.00001
 # #   # #
 
 # # параметры объемного случая # #
+# коэффициент диффузии внутри колец (у.е.)
+disk.d=0.05
+#disk.d=0.27
+# коэффициент диффузии между кольцами (у.е.)
+disk.D=0.026
+#disk.D=0.5
+# коэффициент упругости кольцевых стенок (у.е.)
+disk.K=23.7
 # исходная высота диска (мм)
 disk.h=8
 # радиус диска (мм)
 disk.r=20
 # начальное давление (кПа) 1.1 атм
-disk.p=111.458
+disk.p=101
 # число колец (с учетом того, что пульпозное ядро тоже кольцо)
-disk.rings=5
+disk.rings=1
 # число ячеек в каждом кольце
-disk.cells=46
+disk.cells=4
 # #   # #
 
 # # прочие параметры # #
 # атмосферное давление (кПа) 1.0 атм
 other.atmp=101.325
 # допустимая разница в давлениях
-other.eps=0.1
+other.eps=0.001
 # файл для логгирования
 other.log-file-name=log.txt
 # файл для логгирования значений давлений
-other.p-log-file-name=p_data.txt
+other.pressure-log-file-name=pressures_log.txt
+# файл для логгирования значений прогибов
+other.delta-log-file-name=deltas_log.txt
+# файл для логгирования значений объемов
+other.volume-log-file-name=volumes_log.txt
 # логгирование в консоль
 other.debug-mode=true
 # логгирование в файл
 other.log-to-file=true
+# логгировать все промежуточные значения
+other.log-all=true
 # #   # #
