final commit, works perfect!

--- a/src/main/resources/data.properties
+++ b/src/main/resources/data.properties
@@ -7,30 +7,28 @@ gauss.eps=0.00001
 
 # # параметры объемного случая # #
 # коэффициент диффузии внутри колец (у.е.)
-disk.d=0.05
-#disk.d=0.27
+disk.d=0.049
 # коэффициент диффузии между кольцами (у.е.)
-disk.D=0.026
-#disk.D=0.5
-# коэффициент упругости кольцевых стенок (у.е.)
-disk.K=23.7
+disk.D=0.015
+# коэффициент жесткости кольцевых стенок (у.е.)
+disk.K=11.7
 # исходная высота диска (мм)
-disk.h=8
+disk.h=11
 # радиус диска (мм)
-disk.r=20
+disk.r=21
 # начальное давление (кПа) 1.1 атм
-disk.p=101
+disk.p=111.457
 # число колец (с учетом того, что пульпозное ядро тоже кольцо)
-disk.rings=1
+disk.rings=5
 # число ячеек в каждом кольце
-disk.cells=4
+disk.cells=25
 # #   # #
 
 # # прочие параметры # #
 # атмосферное давление (кПа) 1.0 атм
 other.atmp=101.325
 # допустимая разница в давлениях
-other.eps=0.001
+other.eps=0.01
 # файл для логгирования
 other.log-file-name=log.txt
 # файл для логгирования значений давлений
